removed camera, wake lock, and vibrate to reduce permissions and battery bugs